# fmod-sample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/laputa/fmod/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_laputa_fmod_FmodHelper.h  native-lib.cpp
app/src/main/java/com/laputa/fmod/: FmodHelper.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/laputa/fmod/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
